--- a/themes/hexo-theme-next/source/css/_common/_section/sidebar.styl
+++ b/themes/hexo-theme-next/source/css/_common/_section/sidebar.styl
@@ -124,6 +124,10 @@
     color: rgb(252, 100, 35);
     border: 1px solid rgb(252, 100, 35);
     border-radius: 4px;
+    -webkit-transition: color .15s linear;
+    -moz-transition: color .15s linear;
+    transition: color .15s linear;
+  
 
     i {
       color: rgb(252, 100, 35);
