--- a/themes/yilia/source/css/style.styl
+++ b/themes/yilia/source/css/style.styl
@@ -11,6 +11,21 @@
   font-style:normal
 }
 
+#ds-recent-visitors div img {
+  display: inline-block!important;
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
+  border: 1px solid #ddd;
+  padding: 2px;
+}
+
+#ds-recent-visitors .ds-avatar {
+  display: inline;
+  padding: 0 !important;
+  margin: 4px !important;
+}
+
 global-reset()
 
 ol{
