--- a/themes/yilia/source/css/_partial/main.styl
+++ b/themes/yilia/source/css/_partial/main.styl
@@ -46,7 +46,7 @@
 		.overlay{
 			width: 100%;
 			height: 180px;
-			background-color: black;
+			background-color: #A59B7C;
 			position: absolute;
 			opacity: 0.7;
 		}
