添加友链，优化友链CSS样式

--- a/themes/yilia/source/css/_partial/main.styl
+++ b/themes/yilia/source/css/_partial/main.styl
@@ -310,6 +310,7 @@
 			margin-right: 9px;
 			border-radius: 3px;
 			padding: 5px;
+			display: block;
 			&:hover{
 				background: #88acdb;
 				color: #fff;
