为头像添加animate效果

--- a/themes/yilia/layout/_partial/head.ejs
+++ b/themes/yilia/layout/_partial/head.ejs
@@ -5,6 +5,8 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <script src="//cdn.bootcss.com/pace/1.0.2/pace.min.js"></script>
   <link href="//cdn.bootcss.com/pace/1.0.2/themes/pink/pace-theme-flash.css" rel="stylesheet">
+  <link rel="stylesheet" href="http://7xqoa3.com1.z0.glb.clouddn.com/css%2Fanimate.css">
+  <script src="//cdn.bootcss.com/jquery/2.1.4/jquery.min.js"></script>
   <style>
     .pace .pace-progress {
       background: #1E92FB;
