--- a/themes/yilia/layout/_partial/left-col.ejs
+++ b/themes/yilia/layout/_partial/left-col.ejs
@@ -1,13 +1,20 @@
 <div class="overlay"></div>
 <div class="intrude-less">
 	<header id="header" class="inner">
-		<a href="/" class="profilepic">
+		<a href="/" class="profilepic" id="avatar-photo">
 			<% if (theme.animate){ %>
 			<img lazy-src="<%=theme.avatar%>" class="js-avatar">
 			<%}else{%>
 			<img src="<%=theme.avatar%>" class="js-avatar" style="width: 100%;height: 100%;opacity: 1;">
 			<%}%>
 		</a>
+		<script>
+			$("#avatar-photo").hover(function(){
+				$(this).addClass("animated rubberBand");
+			},function(){
+				$(this).removeClass("animated rubberBand");
+			});
+		</script>
 
 		<hgroup>
 		  <h1 class="header-author"><a href="/"><%=theme.author%></a></h1>
