--- a/themes/yilia/source/css/_partial/main.styl
+++ b/themes/yilia/source/css/_partial/main.styl
@@ -113,23 +113,14 @@
 			height: 20%;
 			border-radius: 300px;
 			opacity: 0;
-			-webkit-transition: transform .5s ease-out, width .2s ease-in, height .2s ease-in, opacity .2s ease-in;
-			-moz-transition: transform .5s ease-out, width .2s ease-in, height .2s ease-in, opacity .2s ease-in;
-			-o-transition: transform .5s ease-out, width .2s ease-in, height .2s ease-in, opacity .2s ease-in;
-			-ms-transition: transform .5s ease-out, width .2s ease-in, height .2s ease-in, opacity .2s ease-in;
-			transition: transform .5s ease-out, width .2s ease-in, height .2s ease-in, opacity .2s ease-in;
 			&.show{
 				width: 100%;
 				height: 100%;
 				opacity: 1;
 			}
-			&:hover {
-				-webkit-transform: rotateZ(360deg);
-			    -moz-transform: rotateZ(360deg);
-			    -o-transform: rotateZ(360deg);
-			    -ms-transform: rotateZ(360deg);
-			    transform: rotateZ(360deg);
-			}
+		}
+		&:hover {
+			border: 5px solid #8383FF;
 		}
 	}
 	.header-subtitle{
