修改友链部分样式

--- a/themes/yilia/layout/_partial/left-col.ejs
+++ b/themes/yilia/layout/_partial/left-col.ejs
@@ -48,7 +48,7 @@
 						</div>
 						<%}%>
 					</div>
-					
+
 				</div>
 				<div class="tips-box hide">
 					<div class="tips-arrow"></div>
@@ -84,7 +84,7 @@
 						</div>
 					</nav>
 				</section>
-				
+
 				<%if(theme.tagcloud){%>
 				<section class="switch-part switch-part2">
 					<div class="widget tagcloud" id="js-tagcloud">
@@ -92,10 +92,10 @@
 					</div>
 				</section>
 				<%}%>
-				
+
 				<%if(theme.friends && theme.friends.length != 0){%>
 				<section class="switch-part switch-part3">
-					<div id="js-friends">
+					<div id="js-friends" class="clearfix">
 					<% for (var i in theme.friends){ %>
 			          <a target="_blank" class="main-nav-link switch-friends-link" href="<%- url_for(theme.friends[i]) %>"><%= i %></a>
 			        <% } %>
@@ -114,5 +114,5 @@
 				<%}%>
 			</div>
 		</div>
-	</header>				
+	</header>
 </div>
