--- a/themes/maupassant/source/css/style.scss
+++ b/themes/maupassant/source/css/style.scss
@@ -78,8 +78,9 @@ div {
             }
         }
         .description {
-            margin: .2em 0 0;
+            margin: .6em 0 0;
             color: #999;
+            font-size: 1.2em;
         }
     }
     #nav-menu {
